# axiom

./: .gitignore  .jscpd.json  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  guardrails.md  mypy.ini  pyproject.toml
axiom-auth/: README.md  pyproject.toml
axiom-cache/: README.md  pyproject.toml
axiom-cache/src/axiom/cache/: __init__.py  manager.py  schemas.py  ttl.py
axiom-cache/src/axiom/cache/base/: __init__.py
axiom-cache/src/axiom/cache/decorators/: __init__.py  cached.py  invalidate.py
axiom-cache/src/axiom/cache/exception/: __init__.py
axiom-cache/src/axiom/cache/inmemory/: __init__.py  async_backend.py  sync_backend.py
axiom-cache/src/axiom/cache/key_maker/: __init__.py  function_key_maker.py
axiom-cache/src/axiom/cache/redis/: __init__.py  async_backend.py  sync_backend.py
axiom-cache/src/axiom/cache/serialization/: __init__.py  dill_strategy.py  msgpack_strategy.py  orjson_strategy.py  pydantic_strategy.py
axiom-cache/tests/: __init__.py  conftest.py  test_cached_decorator.py  test_inmemory.py  test_invalidate_decorator.py  test_key_maker.py  test_manager.py  test_redis_backend.py  test_serialization.py  test_ttl.py
axiom-core/: README.md  pyproject.toml
axiom-core/src/axiom/core/: __init__.py
axiom-core/src/axiom/core/config/: __init__.py
axiom-core/src/axiom/core/context/: __init__.py  request.py  var.py
axiom-core/src/axiom/core/entities/: __init__.py  domain.py  schema.py
axiom-core/src/axiom/core/entity/: __init__.py
axiom-core/src/axiom/core/exception/: __init__.py
axiom-core/src/axiom/core/exceptions/: __init__.py  base.py  http.py
axiom-core/src/axiom/core/filter/: __init__.py  expr.py
axiom-core/src/axiom/core/logger/: __init__.py  core.py  settings.py
axiom-core/src/axiom/core/project/: __init__.py  info.py
axiom-core/src/axiom/core/schema/: __init__.py  response.py
axiom-core/src/axiom/core/settings/: __init__.py  base.py
axiom-core/tests/: __init__.py  test_context.py  test_entities.py  test_exceptions.py  test_integration.py  test_logger.py  test_placeholder.py  test_project_info.py  test_settings.py
axiom-email/: README.md  pyproject.toml
axiom-email/src/axiom/email/: __init__.py  client.py  interfaces.py  models.py
axiom-email/src/axiom/email/exception/: __init__.py
axiom-email/src/axiom/email/hooks/: __init__.py  logging.py
axiom-email/src/axiom/email/providers/: __init__.py
axiom-email/src/axiom/email/templating/: __init__.py  jinja2.py
axiom-email/src/axiom/email/testing/: __init__.py  fake_backend.py  memory_backend.py
axiom-email/tests/: __init__.py
axiom-email/tests/integration/: conftest.py  test_fake_backend.py  test_mailpit_smtp.py  test_yandex_smtp.py
axiom-email/tests/unit/: test_client_async.py  test_client_sync.py  test_exceptions.py  test_hooks.py  test_interfaces.py  test_models.py  test_renderer.py  test_yandex_async.py  test_yandex_sync.py
axiom-fastapi/: README.md  pyproject.toml
axiom-fastapi/src/axiom/fastapi/: __init__.py
axiom-fastapi/src/axiom/fastapi/app/: __init__.py  builder.py  config.py  state.py
axiom-fastapi/src/axiom/fastapi/docs/: __init__.py  routes.py
axiom-fastapi/src/axiom/fastapi/exception/: __init__.py
axiom-fastapi/src/axiom/fastapi/exception_handler/: __init__.py  domain.py  http.py  unhandled.py  validation.py
axiom-fastapi/src/axiom/fastapi/middleware/: __init__.py
axiom-fastapi/src/axiom/fastapi/rate_limiter/: __init__.py  config.py  dependency.py  middleware.py  service.py
axiom-fastapi/src/axiom/fastapi/runner/: __init__.py  gunicorn.py  uvicorn.py
axiom-fastapi/tests/: __init__.py  test_app_builder.py  test_docs_routes.py  test_exception_handlers.py  test_middleware_error.py  test_middleware_logging.py  test_runner_gunicorn.py  test_runner_uvicorn.py
axiom-fastapi/tests/integration/rate_limiter/: conftest.py  test_dependency.py  test_memory_backend.py  test_middleware.py  test_redis_backend.py  test_redis_container.py
axiom-fastapi/tests/unit/rate_limiter/: test_app_state.py  test_key_builders.py  test_policy.py  test_policy_group.py  test_policy_providers.py  test_redis_policy_provider.py  test_result.py  test_service.py
axiom-migration/: README.md  pyproject.toml
axiom-migration/src/axiom/migration/: __init__.py
axiom-migration/src/axiom/migration/exception/: __init__.py
axiom-migration/tests/: __init__.py
axiom-objectstore/: README.md  pyproject.toml
axiom-objectstore/src/axiom/objectstore/: __init__.py
axiom-objectstore/src/axiom/objectstore/abs/: __init__.py
axiom-objectstore/src/axiom/objectstore/base/: __init__.py
axiom-objectstore/src/axiom/objectstore/exception/: __init__.py
axiom-objectstore/src/axiom/objectstore/local/: __init__.py  async_.py  config.py  sync.py
axiom-objectstore/src/axiom/objectstore/s3/: __init__.py  async_.py  config.py  sync.py
axiom-objectstore/tests/: __init__.py  conftest.py  test_abs.py  test_local_async.py  test_local_sync.py  test_s3_async.py  test_s3_sync.py
axiom-redis/: README.md  pyproject.toml
axiom-redis/src/axiom/redis/: __init__.py  async_client.py  client.py  settings.py  sync_client.py
axiom-redis/tests/: __init__.py  conftest.py  test_async_client.py  test_settings_and_factory.py  test_sync_client.py
axiom-tracing/: README.md  pyproject.toml
axiom-tracing/src/axiom/tracing/: __init__.py
axiom-tracing/tests/: __init__.py
oltp/axiom-audit/: README.md  pyproject.toml
oltp/axiom-audit/tests/: __init__.py
oltp/axiom-beanie/: README.md  pyproject.toml
oltp/axiom-beanie/tests/: __init__.py  conftest.py  test_controller.py  test_nested_fields.py  test_repository.py  test_sync_controller.py  test_sync_repository.py
oltp/axiom-beanie/tests/fixtures/: models.py  sync_models.py
oltp/axiom-sqlalchemy/: README.md  pyproject.toml
oltp/axiom-sqlalchemy/tests/: __init__.py  conftest.py  test_async_controller.py  test_async_repository.py  test_exception_handler_integrity.py  test_middleware.py  test_nested_fields.py  test_sync_controller.py  test_sync_repository.py  test_utils.py
oltp/axiom-sqlalchemy/tests/fixtures/: models.py
(+339 files in other folders)
