[project]
name = "axiom"
version = "0.1.0"
description = "axiom core with plugins for FastAPI applicationse"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2",
    "pre-commit>=4.2.0,<5",
    "ruff>=0.11.13,<1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # tidy imports
    "TID",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # pydocstyle
    "D",
    # pyugrade
    "UP"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
