[project]
name = "axiom-core"
version = "0.1.0"
description = "Axiom core — foundation package with settings, logging, exceptions, context, entities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2",
    "pytest>=8.0.0,<9",
    "ruff>=0.11.13,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom"]
