[project]
name = "axiom-migration"
version = "0.1.0"
description = "Axiom migration — database migration management via Alembic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "axiom-core",
    "alembic>=1.14.0,<2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2",
    "pytest>=8.0.0,<9",
    "ruff>=0.11.13,<1",
]

[tool.uv.sources]
axiom-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom"]
