[project]
name = "axiom-redis"
version = "0.1.0"
description = "Axiom Redis integration — Redis client and utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "axiom-core",
    "pydantic-settings>=2.0.0",
    "redis[asyncio,hiredis]>=5.0.0,<6",
]

[dependency-groups]
dev = [
    "fakeredis[asyncio]>=2.0.0",
    "mypy>=1.16.0,<2",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.13,<1",
]

[tool.uv.sources]
axiom-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
