[project]
name = "axiom-tracing"
version = "0.1.0"
description = "Axiom tracing — distributed tracing via OpenTelemetry and Jaeger"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "axiom-core",
    "opentelemetry-api>=1.25.0,<2",
    "opentelemetry-sdk>=1.25.0,<2",
    "opentelemetry-exporter-jaeger>=1.21.0,<2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2",
    "pytest>=8.0.0,<9",
    "ruff>=0.11.13,<1",
]

[tool.uv.sources]
axiom-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom"]
