[project]
name = "axiom-audit"
version = "0.1.0"
description = "Axiom audit logging — entity change tracking and audit trails"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "axiom-core",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2",
    "pytest>=8.0.0,<9",
    "ruff>=0.11.13,<1",
]

[tool.uv.sources]
axiom-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom"]
